<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/darker_gray"
    tools:ignore="UnusedAttribute">
    <ProgressBar
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mRecipeProgressBar"/>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:id="@+id/mRecipeRecycler"
        android:layout_height="match_parent"/>
</LinearLayout>
